--- a/com-project-clean/src/main/resources/templates/admin/checkList/selectDenialCheckListDetails.html
+++ b/com-project-clean/src/main/resources/templates/admin/checkList/selectDenialCheckListDetails.html
@@ -38,12 +38,12 @@
 </div>
 
 <input hidden type="text" th:value="${employeeName}" class="employeeName" id="employeeName">
-<form hidden class="form-inline">
-    <div class="form-group">
-        <input type="text" id="sendingMessage" class="form-control">
-        <input type="text" id="sendingName" class="form-control">
+<form hidden>
+    <div>
+        <input type="text" id="sendingMessage">
+        <input type="text" id="sendingName" >
     </div>
-    <button id="send" class="btn btn-default" type="submit">Send</button>
+    <button id="send" type="submit">Send</button>
 </form>
 
 <!-- textarea script -->
