--- a/com-project-clean/src/main/resources/templates/admin/humanResource/registEmployee/returnEmployeeList.html
+++ b/com-project-clean/src/main/resources/templates/admin/humanResource/registEmployee/returnEmployeeList.html
@@ -56,11 +56,10 @@
 			
 			<select name="category" id="category">
 				<option value="all" selected>전체</option>
-				<option value="no">사원번호</option>
 				<option value="name">이름</option>
 				<option value="phone">전화번호</option>
 			</select> 
-			<input type="text" name="categoryValue" placeholder="대기인원 조회">
+			<input type="text" id="categoryValue" name="categoryValue" placeholder="대기인원 조회">
 			<input type="text" style="display: none;"> <!-- enter - submit 방지 -->
 			
 			<button type="button" id="searchN" onclick="returnAjax();">검색</button>
@@ -83,7 +82,9 @@
 
                 </tbody>
             </table>
-
+             <form name="mainPage">
+				<input type="hidden" value="0" name=page>
+	        </form>
 	            <div id="paging" style="display: flex; justify-content: center;">
 	            <!-- /* 페이징 버튼들어올 공간 */ -->
 				</div>
@@ -119,7 +120,7 @@
      }
      
      
-	  /* 승인 대기중 ajax */
+	  /* 리턴 인원 ajax */
      function returnAjaxFunction(queryString){
         $.ajax({
            url : "/admin/hr/return/employee",
@@ -200,7 +201,23 @@
         });
      };
 
+     //검색 후 리스트 리셋
+     $('#category').change(function(){
+        $("#category option:selected").each(function () {
+     		
+     			 $("#categoryValue").val('');         //기존 값 초기화
+     			 mainList();
 
+        });
+     });
+ 	    
+ 	  /* 검색 시 검색 결과 리셋 2-2 */
+     function mainList(){
+        console.log("ajax 기본함수 실행 시도");
+ 			
+        var queryString = $("form[name=mainPage]").serialize();
+        returnAjaxFunction(queryString);
+     }
 
         
  		/* hover event */
