--- a/com-project-clean/src/main/resources/templates/admin/humanResource/selectAllEmployee/selectAllEmployee.html
+++ b/com-project-clean/src/main/resources/templates/admin/humanResource/selectAllEmployee/selectAllEmployee.html
@@ -29,17 +29,15 @@ body {
 
 		
 		<!-- 재직자 검색 -->
-		<form name="retireNForm" action="/admin/select/retireN" id="retireNSearch">
+		<form name="retireNForm" id="retireNSearch">
 			<span>인사관리 카드조회</span> 
-			<select name="category" id="category">
+			<select name="categoryN" id="categoryN">
 				<option value="all" selected>전체</option>
-				<option value="no">사원번호</option>
 				<option value="name">이름</option>
-				<option value="birth">생년월일</option>
 				<option value="address">주소</option>
 				<option value="phone">전화번호</option>
 			</select> 
-			<input type="text" name="categoryValue" placeholder="재직자 검색">
+			<input type="text" name="categoryValue" id="categoryValueN" placeholder="재직자 검색">
 			<input type="text" style="display: none;"> <!-- enter - submit 방지 -->
 			
 			<button type="button" id="searchN" onclick="retireNAjax();">검색</button>
@@ -47,15 +45,15 @@ body {
 		</form>
 		<!-- 퇴사자 검색 -->
 		               
-		<form name="retireYForm" action="/admin/select/retireY" id="retireYSearch">
-			<span>인사관리 카드조회</span> <select name="category" id="category">
+		<form name="retireYForm" id="retireYSearch">
+			<span>인사관리 카드조회</span> 
+			<select name="categoryY" id="categoryY">
 				<option value="all" selected>전체</option>
-				<option value="no">사원번호</option>
 				<option value="name">이름</option>
 				<option value="address">주소</option>
 				<option value="phone">전화번호</option>
 			</select> 
-			<input type="text" name="categoryValue" placeholder="퇴사자 검색">
+			<input type="text" name="categoryValue" id="categoryValueY" placeholder="퇴사자 검색">
 			<input type="text" style="display: none;"> <!-- enter - submit 방지 -->
 			<button type="button" id="searchY" onclick="retireYAjax();">검색</button>
 			<input type="hidden" value="0" name=page>
@@ -69,7 +67,7 @@ body {
 			<table id="employeeList" border="1">
 				<thead>
 					<tr>
-						<th>사원번호</th>
+						<th>번호</th>
 						<th>이름</th>
 						<th>생년월일</th>
 						<th>주소</th>
@@ -81,32 +79,17 @@ body {
                   <!-- /* ajax data 삽입 공간 */ -->				
  				</tbody>
 			</table>
+			
+			        <!-- 검색 시 검색 결과 리셋 2-1 -->
+        <form name="mainPage">
+		<input type="hidden" value="0" name="categoryN">
+        </form>
+			
 				<div id="paging" style="display: flex; justify-content: center;">
                <!-- /* 페이징 버튼들어올 공간 */ -->
 				</div>
 		</div>
 		
-			
-						<!-- <div> <input id="inputMainTain" th:value="${mainTain}"></div> -->
-		</div>
-		
-		<script th:inline="javascript">
-		    /*<![CDATA[
-			$(function(){
-				const mainTain = [[${mainTain}]]	
-			if(mainTain == 'N'){
-				$("#retireNEmployee").attr("checked","true")
-				$('#entireN').show();
-				$('#entireY').hide();
-			}else if(mainTain == 'Y'){
-				$("#retireYEmployee").attr("checked","true")
-				$('#entireN').hide();
-				$('#entireY').show();
-			}
-			hover();
-			})
-		    /*]]>*/
-		</script>
 
 
 	<script>
@@ -146,7 +129,7 @@ body {
 	      
 	      /* 유저가 조건 선택해 검색하는 요청 함수 */
 	      function retireNAjax(){
-	         console.log("ajax 기본함수 실행 시도");
+	         console.log("retireNAjax 기본함수 실행 시도");
 				$('#entireN').attr('style', "display:inline;");
 				$('#retireNSearch').attr('style', "display:inline;");
 				$('#entireY').attr('style', "display:none;");
@@ -158,7 +141,7 @@ body {
 	      
 	      /* 유저가 조건 선택해 검색하는 요청 함수 */
 	      function retireYAjax(){
-	         console.log("ajax 기본함수 실행 시도");
+	         console.log("retireYAjax 기본함수 실행 시도");
    				$('#entireN').attr('style', "display:none;");
    				$('#retireNSearch').attr('style', "display:none;");
    				$('#entireY').attr('style', "display:inline;");
@@ -332,7 +315,45 @@ body {
 	      
 	      
 	      
+	      //검색 후 리스트 리셋(재직자)
+	      $('#categoryN').change(function(){
+	         $("#categoryN option:selected").each(function () {
+	      		
+	      			 $("#categoryValueN").val('');                       //기존 값 초기화
+	      			 retireNMainList();
+
+	         });
+	      });
 	      
+	      //검색 후 리스트 리셋(퇴사자)
+	      $('#categoryY').change(function(){
+	         $("#categoryY option:selected").each(function () {
+	      		
+	      			 $("#categoryValueY").val('');                       //기존 값 초기화
+	      			 retireYMainList();
+
+	         });
+	      }); 
+	    
+	    
+	    
+	    
+	  	    
+	  	  /* 검색 시 검색 결과 리셋 (재직자)2-2 */
+	      function retireNMainList(){
+	         console.log("ajax 기본함수 실행 시도333");
+	  			
+	         var queryString = $("form[name=mainPage]").serialize();
+	         retireNAjaxFunction(queryString);
+	      }
+	  	  
+	  	  /* 검색 시 검색 결과 리셋 (퇴사자)2-2 */
+	      function retireYMainList(){
+	         console.log("ajax 기본함수 실행 시도444");
+	  			
+	         var queryString = $("form[name=mainPage]").serialize();
+	         retireYAjaxFunction(queryString);
+	      }
 	
 
 	      
