--- a/com-project-clean/src/main/resources/templates/employee/checkList/selectDenialCheckListDetails.html
+++ b/com-project-clean/src/main/resources/templates/employee/checkList/selectDenialCheckListDetails.html
@@ -15,7 +15,15 @@
 	      
 </head>
 <body>
-
+	<input hidden type="text" th:value="${userId}" class="employeeName" id="employeeName">
+	
+	<form hidden>
+    	<div>
+     	 	<input type="text" id="sendingMessage">
+        	<input type="text" id="sendingName" >
+    	</div>
+    	<button id="send" type="submit">Send</button>
+	</form>
 <section>
 
 	<form method="post" action="admin/checklist/denial"  enctype="multipart/form-data">
@@ -65,8 +73,17 @@
     	
     	document.getElementById("submit").onclick = function(){
 			const reservationNo = $('.reservationNo').val();
+			const userName = document.getElementById("employeeName").value
     		if(confirm("사유서를 제출하시겠습니까? 담당 관리자에게 알람이 전송됩니다.")){
     			
+    			$("#sendingMessage").val("사유서가 제출되었습니다.")
+    			$("#sendingName").val(userName)
+    			
+    			$("#send").bind("click", function(){
+	    			});
+	    			
+	    		$("#send").trigger("click");
+	    		
     			document.getElementById("employeeOpnion").remove();
     			document.getElementById("employeeOpnion2").style="";
     			const jbHtml = $( 'section' ).html();
