--- a/com-project-clean/src/main/resources/templates/pay/adminPaySelectInfo.html
+++ b/com-project-clean/src/main/resources/templates/pay/adminPaySelectInfo.html
@@ -12,6 +12,12 @@
 	<section>
 		<table border="1">
 	        <tr>
+		        <th:block th:if="${pay.admin.adminPictureSaveName == null}">
+					   <td width="200px" height="200px" >
+					   	<img width="100" height="120" 
+				        	th:src="${ admin.getAdminPictureSaveRoot() + '/' + admin.getAdminPictureSaveName() }"/>
+				        </td>
+				</th:block>
 	            <th width="200px" height="200px"></th>
 	            <th width="210px" th:utext="|급여 지급 날짜 <br> <p>${ pay.payAdminDate }</p>|"><br></th>
 	            <th width="250px" colspan="2" th:utext="|4대보험 미적용 급여 <br> <p>${ pay.admin.adminSalary }원</p>|"></th>
