--- a/com-project-clean/src/main/resources/templates/admin/adminMainPage.html
+++ b/com-project-clean/src/main/resources/templates/admin/adminMainPage.html
@@ -7,6 +7,8 @@
 </head>
 <body>
 	 <div th:include="common/header.html"></div>
+	 <div th:include="admin/adminAside.html"></div>
+	 
 	 
 	<button onclick="location.href='/admin/select/retireN'">전체 인원 조회</button>
 	<button onclick="location.href='/admin/hr/regist/EmployeePage'">직원 등록(hr)</button>
@@ -44,8 +46,6 @@
 		<input value="1차 휴가 대기 목록" type="button" onclick="location.href='/admin/vacation/standbyFirstVacationList'">
 		<input value="2차 휴가 대기 목록" type="button" onclick="location.href='/admin/vacation/standbySecondVacationList'">
 		<input value="휴가 신청" type="button" onclick="location.href='/admin/vacation/registVacation'">
-	
-	 <!-- <div th:include="admin/adminAside.html"></div> -->
 	 
 	 <script>
     	  const adminNoValue = $("#myVacation").text();
