--- a/com-project-clean/src/main/resources/templates/common/Header.html
+++ b/com-project-clean/src/main/resources/templates/common/Header.html
@@ -82,7 +82,8 @@
 
                     <ul class="navbar-nav me-auto mb-3 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link" href="#"><img src="/image/mypage.png" class="btn2"> </a>
+                            <a class="nav-link" id="adminMyPage"><img src="/image/mypage.png" class="btn2"></a>
+            
                         </li> 
                         <li class="nav-item">
                             <a class="nav-link" href="/member/logout"><img src="/image/logout.png" class="btn2"> </a>
@@ -175,6 +176,6 @@
         
 		
     </header>
-		
+	
 </body>
 </html>
